# LeniAMD

./: CMakeLists.txt  README.md  gitignore
include/: hip_tracer.hpp  render_engine.hpp
include/htc/: convolution_manager.hpp  kernels.hpp  lenia_graph.hpp  utils.hpp
include/lve/: device.hpp  multiple_vertex_buffer.hpp  pipeline.hpp  swap_chain.hpp  utils.hpp  window.hpp
shaders/: compile.sh  simple_shader.frag  simple_shader.vert
src/: hip_tracer.hip  main.cpp  render_engine.cpp
src/htc/: convolution_manager.hip  kernels.hip  lenia_graph.hip
src/lve/: device.cpp  multiple_vertex_buffer.cpp  pipeline.cpp  swap_chain.cpp  utils.cpp  window.cpp
